ingress-hosts.yaml
#---------------------------------------------------------------------
# Manifest File to create Ingess Rules for Hosts
#
# Copyleft (c) by AlexRez 2022
#---------------------------------------------------------------------
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - host: www.alexqwinta.net
    http:
      paths:
        - backend:
           serviceName: main
           servicePort: 80

  - host: web1.alexqwinta.net
    http:
      paths:
        - backend:
           serviceName: web1
           servicePort: 80

  - host: web2.alexqwinta.net
    http:
      paths:
        - backend:
           serviceName: web2
           servicePort: 80

  - host: cat.alexqwinta.net
    http:
      paths:
        - backend:
           serviceName: tomcat
           servicePort: 8080
